# ReadMind

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  claude-progress.md  claude-progress.txt  docker-compose.yml  feature_list.json
.claude/: settings.json
.claude/commands/: evening.md  morning.md
ai-service/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ai-service/app/: main.py
ai-service/app/api/: deps.py  highlights.py  parse.py  qa.py  summarize.py
ai-service/app/chunking/: splitter.py  tokens.py
ai-service/app/core/: config.py  jsonout.py  lang.py
ai-service/app/highlights/: errors.py  prompts.py  service.py
ai-service/app/parse/: pipeline.py  ports.py
ai-service/app/parsers/: __init__.py  base.py  pdf.py
ai-service/app/providers/: __init__.py  _http.py  embedding.py  errors.py  llm.py
ai-service/app/rag/: errors.py  prompts.py  qa.py
ai-service/app/repositories/: chunks_pg.py
ai-service/app/schemas/: highlights.py  parse.py  qa.py  summarize.py
ai-service/app/storage/: s3.py
ai-service/app/summarize/: errors.py  jsonout.py  prompts.py  service.py
ai-service/tests/: conftest.py  test_chunks_pg_repo.py  test_embedding_provider.py  test_highlights_api.py  test_highlights_service.py  test_llm_provider.py  test_parse_api.py  test_parse_pipeline.py  test_pdf_parser.py  test_qa_api.py  test_qa_service.py  test_retriever_pg.py  test_splitter.py  test_summarize_api.py  test_summarize_service.py
backend/: build.gradle.kts  settings.gradle.kts
docs/: ReadMind_개발명세서_BuildSpec.md  SETUP_Windows.md
(+59 files in other folders)
