[project]
name = "readmind-ai-service"
version = "0.1.0"
description = "ReadMind AI service (M1): parse/summarize/qa over documents"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
